--- a/src/modules/my/app/app.html
+++ b/src/modules/my/app/app.html
@@ -6,7 +6,7 @@
         <!-- <my-greeting speed="fast"></my-greeting> -->
         <my-emoji-picker></my-emoji-picker>
     </div>
-
+    <h1>WCS</h1>
     <div class="center">
         <img src="./resources/lwc.png" />
     </div>
