adding new things!

--- a/src/modules/my/app/app.html
+++ b/src/modules/my/app/app.html
@@ -1,17 +1,27 @@
 <template>
     <!-- LWC sample component <my-greeting> -->
-    <div class="center greeting">
-        <!-- <my-greeting speed="slow"></my-greeting> -->
-        <my-greeting speed="medium"></my-greeting>
-        <!-- <my-greeting speed="fast"></my-greeting> -->
-        <my-emoji-picker></my-emoji-picker>
+    <!-- <div class="center greeting">
+        <my-greeting speed="slow"></my-greeting>
+        <div>
+            <my-wired-button>Click Me</my-wired-button>
+        </div>
+        <div>
+            <my-wired-progress value="65" percentage></my-wired-progress>
+        </div>
+        <div>
+            <my-wired-progress value="25"></my-wired-progress>
+        </div>
+        <div>
+            <my-wired-progress value="10" min="5" max="15"></my-wired-progress>
+        </div>
     </div>
     <h1>WCS</h1>
     <div class="center">
         <img src="./resources/lwc.png" />
-    </div>
-
+    </div> -->
     <!-- Page code -->
+    <my-person-card></my-person-card>
+    <my-editor></my-editor>
     <div class="center">
         <div class="container">
             <!-- prettier-ignore -->
