--- a/src/modules/my/editor/editor.html
+++ b/src/modules/my/editor/editor.html
@@ -1,6 +1,10 @@
 <template>
     <div>
+        <span onclick={addBold}>B</span>
+    </div>
+    <div>
         <textarea class="editor" oninput={handleInput}></textarea>
+        <br/>
         https://codepen.io/gilsjhonny/pen/mmXRLq
         <br />
         https://vimeo.com/475073143
